# superpowers

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml
agent/: __main__.py  cli.py  llm_client.py  orchestrator.py  sandbox.py  trace.py
agent/eval/: run_dabench.py
agent/eval/scorers/infiagent/: eval_closed_form.py  utils.py
demo/: app.py
docs/superpowers/plans/: 2026-05-26-data-analysis-agent.md  2026-05-26-portfolio-website.md
docs/superpowers/specs/: 2026-05-26-data-analysis-agent-design.md  2026-05-26-portfolio-website-design.md
prompts/: system.txt
tests/: test_end_to_end.py  test_eval.py  test_llm_client.py  test_orchestrator.py  test_sandbox.py  test_trace.py
